// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification /> it renders colored Notification with Props 1`] = `
<Tile
  className="mfui-notification mfui-notification_type_error mfui-notification_colored notification rootClass"
  dataAttrs={
    Object {
      "root": undefined,
    }
  }
  radius="rounded"
  shadowLevel="hover"
>
  <div
    className="mfui-notification__container containerClass"
  >
    <div
      className="mfui-notification__icon-container"
    >
      <test-file-stub />
    </div>
    <div
      className="mfui-notification__content contentClass"
    >
      <Header
        as="h5"
        className="mfui-notification__title"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
      >
        title
      </Header>
      <p
        className="mfui-notification__text"
      >
        Some test text
      </p>
    </div>
  </div>
</Tile>
`;

exports[`<Notification /> renders component 1`] = `
<Tile
  className="mfui-notification mfui-notification_type_info mfui-notification_colored"
  dataAttrs={
    Object {
      "root": undefined,
    }
  }
  radius="rounded"
  shadowLevel="zero"
>
  <div
    className="mfui-notification__container"
  >
    <div
      className="mfui-notification__icon-container"
    >
      <test-file-stub />
    </div>
    <div
      className="mfui-notification__content"
    >
      <p
        className="mfui-notification__text"
      >
        Some test text
      </p>
    </div>
  </div>
</Tile>
`;
